--- a/client/src/components/styles/chatbox.css
+++ b/client/src/components/styles/chatbox.css
@@ -1,11 +1,17 @@
+* {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
 .chatbox {
     width: 350px;
+    background: #F7F7F7;
 }
 .chatbox__chatfeed {
     height: 500px;
     /* width: 350px; */
-    border: 2px solid black;
-    border-radius: 4px;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
 }
 .chatbox__input-fields {
     height: 80px;
@@ -16,5 +22,9 @@
     flex: 0 0 40px;
 }
 .chatbox__input-fields textarea {
+    background: #FFFFFF;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
     flex: 1 0 0;
 }
