--- a/client/src/components/styles/video.css
+++ b/client/src/components/styles/video.css
@@ -1,4 +1,6 @@
 .player-wrapper {
+  width: 350px;
+  height: 500px;
   position: relative;
   padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
 }
