updated iframe link and css

--- a/client/src/components/styles/iframe.css
+++ b/client/src/components/styles/iframe.css
@@ -1,9 +1,11 @@
 iframe {
-    width: 350px;
+    width: 750px;
     height: 500px;
+    border: solid;
+    border-radius: 5px;
 }
 .iframe-wrapper {
-    width: 350px;
+    width: 750px;
     height: 500px;
     position: relative;
     display: block;
