styled admin page

--- a/client/src/components/styles/container.css
+++ b/client/src/components/styles/container.css
@@ -1,7 +1,8 @@
 .container {
-    margin: 15px;
+    padding-top: 15px;
     display: flex;
     justify-content: space-evenly;
+    width:auto
 }
 
 @media screen and (max-width: 840px) {
