--- a/client/src/components/styles/container.css
+++ b/client/src/components/styles/container.css
@@ -1,17 +1,9 @@
 .container {
-    padding-top: 15px;
-    display: flex;
-    justify-content: space-evenly;
-    width:auto
-}
-
-@media screen and (max-width: 840px) {
-  .container {
-    margin: 15px;
-    flex-direction: column;
-    align-items: center;
-  }
-
+  padding-top: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: auto;
 }
 
 .container .reading a {
